# moonraker

./: .gitignore  AGENTS.md  Cargo.toml  EXAMPLE.txt  README.md  RLM.md
src/: environment.rs  lib.rs  repl.rs  rlm.rs
src/inputs/: mod.rs
src/registry/: SPEC.md
src/tools/: mod.rs  run_cell.rs
tests/: test_llm_query.rs  test_rig_suitability.rs  test_rlm_integration.rs
tests/data/: red-gold.txt
