[package]
name = "moonraker"
version = "0.1.0"
edition = "2024"
default-run = "moonraker"

[[bin]]
name = "moonraker"
path = "src/bin/moonraker.rs"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1"
clap = { version = "4.5.51", features = ["derive"] }
colored = "3.0.0"
lopdf = "0.38.0"
mlua = { version = "0.11.4", features = ["lua54", "vendored", "send"] }
ollama-rs = "0.3.2"
regex = "1.12.2"
rig-core = "0.24"
schemars = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
tiktoken-rs = "0.9.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
[dev-dependencies]
tempfile = "3.14"
